tweaks, mostly to quantifier rules

--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -139,7 +139,7 @@ The symbolisation keys that I considered in chapter \ref{ch.FOL} consequently gi
 \end{itemize}
 
 
-\section{Representing interpretations}
+\section{Representing interpretations}\label{graph}
 
 One way of presenting an interpretation that is often convenient is to present its extensions \emph{diagrammatically}. 
 
