--- a/forallx-adl-notation.tex
+++ b/forallx-adl-notation.tex
@@ -8,7 +8,7 @@
 \chapter{Alternative terminology and notation}\label{app.notation}
 
 \section*{Alternative terminology}
-\paragraph{Sentential logic.} The study of \TFL\ goes by other names. The name we have given it – sentential logic – derives from the fact that it deals with whole sentences as its most basic building blocks. Other features motivate different names.  Sometimes it is called \emph{truth-functional logic}, because it deals only with assignments of truth and falsity to sentences, and its connectives are all truth-functional. Sometimes it is called \emph{propositional logic}, which strikes me as a misleading choice. This may sometimes be innocent, as some people  use `proposition' to mean `sentence'. However, noting that different sentences can mean the same thing, many people use the term  `proposition' as a useful way of referring to the meaning of a sentence, what that sentence expresses. In \emph{this} sense of `proposition', `propositional logic' is not a good name for the study of \TFL, since synonymous but not truth-functionally equivalent sentences like `Vixens are bold' and `Female foxes are bold' will be logically distinguished even though they express the same proposition.
+\paragraph{Sentential logic.} The study of \TFL\ goes by other names. The name we have given it – sentential logic – derives from the fact that it deals with whole sentences as its most basic building blocks. Other features motivate different names.  Sometimes it is called \emph{truth-functional logic}, because it deals only with assignments of truth and falsity to sentences, and its connectives are all truth-functional. Sometimes it is called \emph{propositional logic}, which strikes me as a misleading choice. This may sometimes be innocent, as some people  use `proposition' to mean `sentence'. However, noting that different sentences can mean the same thing, many people use the term  `proposition' as a useful way of referring to the meaning of a sentence, what that sentence expresses. In \emph{this} sense of `proposition', `propositional logic' is not a good name for the study of \TFL, since synonymous but not logically equivalent sentences like `Vixens are bold' and `Female foxes are bold' will be logically distinguished even though they express the same proposition.
 
 
 \paragraph{Quantifier logic.} The study of \FOL\ goes by other names. Sometimes it is called \emph{predicate logic}, because it allows us to apply  predicates to objects. Sometimes it is called \emph{first-order logic}, because it makes use only of quantifiers over objects, and variables that can be substituted for constants. This is to be distinguished from \emph{higher-order logic}, which introduces quantification over properties, and variables that can be substituted for predicates. (This device would allow us to formalise such sentences as `Jane and Kane are alike in \emph{every respect}', treating the italicised phrase as a quantifier over `respects', i.e., properties. This results in something like $\forall P (Pj \leftrightarrow Pk)$, which is \emph{not} a sentence of \FOL.)
@@ -39,7 +39,7 @@ This appendix presents some common symbols, so that you can recognise them if yo
 
 \paragraph{Negation.} Two commonly used symbols are the \emph{not sign}, `$¬$', and the \emph{tilde operator}, `$∼$'. In some more advanced formal systems it is necessary to distinguish between two kinds of negation; the distinction is sometimes represented by using both `$\enot$' and `$∼$'. 
 
-Some texts use an overline to indicate negation, so that `$\overline{\mathscr{A}}$'' expresses the same thing as `$¬\mathscr{A}$'. This is clear enough if $\mathscr{A}$ is an atomic sentence, but quickly becomes cumbersome if we attempt to nest negations: `$¬(A \wedge ¬(¬¬B \wedge C))$' becomes the unwieldy $$\overline{A \wedge \overline{(\overline{\overline{B}}\wedge C)}}.$$
+Some texts use an overline to indicate negation, so that `$\overline{\mathscr{A}}$' expresses the same thing as `$¬\mathscr{A}$'. This is clear enough if $\mathscr{A}$ is an atomic sentence, but quickly becomes cumbersome if we attempt to nest negations: `$¬(A \wedge ¬(¬¬B \wedge C))$' becomes the unwieldy $$\overline{A \wedge \overline{(\overline{\overline{B}}\wedge C)}}.$$
 
 \paragraph{Disjunction.} The symbol `$\vee$' is typically used to symbolize inclusive disjunction. One etymology is from the Latin word `vel', meaning `or'.%In some systems, disjunction is written as addition.
 
